--- a/src/sass/components/_top-panel.sass
+++ b/src/sass/components/_top-panel.sass
@@ -69,6 +69,7 @@
 
 	+media('<tab-lg')
 		height: $top-panel-height--md
+		box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2)
 		+padding-horizontal(0)
 
 .top-panel-contacts
