--- a/src/sass/components/_catalog-list.sass
+++ b/src/sass/components/_catalog-list.sass
@@ -132,8 +132,17 @@
 		+media('<desk-hd')
 			width: round-float(100%/3, 4)
 
-		+media('<desk-md')
+		+media('<desk-lg')
 			width: round-float(100%/2, 4)
+
+		//+media('<desk-md')
+			width: round-float(100%/3, 4)
+
+		//+media('<tab-lg')
+			width: round-float(100%/2, 4)
+
+		+media('<mob-lg')
+			width: round-float(100%/1, 4)
 
 
 	.catalog__inner
