--- a/src/sass/components/_top-panel.sass
+++ b/src/sass/components/_top-panel.sass
@@ -68,24 +68,26 @@
 		+padding-horizontal($text-layout-space-horizontal--lg)
 
 	+media('<tab-lg')
-		+padding-horizontal($text-layout-space-horizontal--md)
-
-	+media('<tab-sm')
-		+padding-horizontal($text-layout-space-horizontal--sm)
-
-	+media('<tab-lg')
 		position: fixed
 		+position(0, 0)
 		height: $top-panel-height--md
 		width: 100%
-		box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2)
+		min-width: 320px
 		+padding-horizontal(0)
+		box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2)
+
+	+media('<tab-sm')
+
+
 
 .top-panel-contacts
 	+clear-spacing
 
 	.top-panel &
 		float: left
+
+	+media('<tab-sm')
+		display: none
 
 .top-panel-contacts__item
 	+display-inline-block-top
@@ -214,73 +216,6 @@
 
 /*contact phones end
 
-/* button to site
-.btn-siblings
-	+display-inline-block-top
-	position: relative
-	background-color: white
-	padding: 10px 20px
-	+font-bold
-	+font(12px, 14px)
-	white-space: nowrap
-	text-decoration: none
-	color: #{$logo-bg-color}
-	text-transform: uppercase
-	text-align: center
-	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3)
-	transition-property: box-shadow
-	transition-duration: $animation-speed
-	
-	&::before, &::after
-		content: ""
-		position: absolute
-		top: 50%
-		border-left: 1px dotted black
-		height: 28px
-		margin-top: -14px
-		display: none
-		
-	&::before
-		left: 0
-		
-	&::after
-		right: 0
-
-	.top-panel &
-		float: right
-		margin-top: 16px
-
-		+media('<tab-lg')
-			height: #{$top-panel-height--md}
-			margin-top: 0
-			box-shadow: none
-
-			&::before, &::after
-				display: block
-
-	i
-		+display-inline-block-middle
-		+size(26px, 20px)
-		margin-right: 15px
-		+font(0, 0)
-		background: no-repeat center
-		background-image: url(../../img/logo-short-alt.png)
-		background-size: contain
-
-	span
-		+display-inline-block-middle
-		white-space: normal
-		text-align: left
-
-	.no-touchevents &:hover
-		box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5)
-
-		+media('<tab-lg')
-			box-shadow: none
-			background: $bg-color-light
-
-/* button to site end
-
 /* logo alt
 .logo-alt
 	display: inline-block
@@ -307,6 +242,9 @@
 
 		+media('<tab-lg')
 			+padding-horizontal(30px)
+
+		+media('<tab-sm')
+			+padding-horizontal(10px)
 
 .logo-alt-title, .logo-alt-map
 	position: relative
@@ -349,18 +287,21 @@
 		+ratio(101, 53)
 
 	.ea-site &
-		+size(125px, auto)
-		background-image: url(../../img/logo-title--ea.png)
+		+size(178px, auto)
+		background-image: url(../../img/logo--ea.png)
 
 		&::before
-			+ratio(125, 37)
+			+ratio(178, 42)
 
 		+media('<tab-lg')
-			background-image: url(../../img/logo--ea.png)
 			width: 144px
 
+		+media('<tab-sm')
+			+size(39px, auto)
+			background-image: url(../../img/logo-short--ea.png)
+
 			&::before
-				+ratio(144, 34)
+				+ratio(39, 40)
 
 .logo-alt-map__fig
 	+size(192px, auto)
