--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -68,6 +68,7 @@
 @import components/catalog-list
 @import components/catalog-menu
 @import components/view-switcher
+@import components/map-site
 
 ///*======================================================*/
 ///*PARTIALS 2*/
