--- a/src/sass/components/_buttons.sass
+++ b/src/sass/components/_buttons.sass
@@ -137,6 +137,86 @@
 			&::before, &::after
 				background-color: $text-color
 
+
+
+/* button to site
+.btn-siblings
+	+display-inline-block-top
+	position: relative
+	background-color: white
+	padding: 10px 20px
+	+font-bold
+	+font(12px, 14px)
+	white-space: nowrap
+	text-decoration: none
+	color: #{$logo-bg-color}
+	text-transform: uppercase
+	text-align: center
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3)
+	transition-property: box-shadow, background-color
+	transition-duration: $animation-speed
+
+	&::before, &::after
+		content: ""
+		position: absolute
+		top: 50%
+		border-left: 1px dotted black
+		height: 28px
+		margin-top: -14px
+		display: none
+
+	&::before
+		left: 0
+
+	&::after
+		right: 0
+
+	// в шапке
+	.top-panel &
+		float: right
+		margin-top: 16px
+
+		+media('<tab-lg')
+			display: none
+			height: #{$top-panel-height--md}
+			margin-top: 0
+			box-shadow: none
+
+			&::before, &::after
+				display: block
+
+	.no-touchevents .top-panel &:hover
+		+media('<tab-lg')
+			box-shadow: none
+			background: $bg-color-light
+
+	// на панели навигации
+	.nav-footer &
+		display: none
+		margin-bottom: $bottom-space
+
+		+media('<tab-lg')
+			display: block
+
+	i
+		+display-inline-block-middle
+		+size(26px, 20px)
+		margin-right: 15px
+		+font(0, 0)
+		background: no-repeat center
+		background-image: url(../../img/logo-short-alt.png)
+		background-size: contain
+
+	span
+		+display-inline-block-middle
+		white-space: normal
+		text-align: left
+
+	.no-touchevents &:hover
+		box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5)
+
+/* button to site end
+
 /* button menu
 $btn-menu-bg: white !default
 $btn-menu-color: white !default
