--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -66,6 +66,7 @@
 @import components/providers
 @import components/article
 @import components/catalog-list
+@import components/products-list
 @import components/catalog-menu
 @import components/view-switcher
 @import components/map-site
