--- a/src/sass/base/_typography.sass
+++ b/src/sass/base/_typography.sass
@@ -100,7 +100,7 @@ i b, i strong, em b, em strong, b i, b em, strong i, strong em
 
 // user spacer
 .user-spacer
-	height: $bottom-space-lg
+	height: $bottom-space--lg
 
 // user spacer end
 
@@ -313,7 +313,7 @@ i b, i strong, em b, em strong, b i, b em, strong i, strong em
 	overflow: auto
 	max-width: 100%
 	-webkit-overflow-scrolling: touch
-	margin-bottom: $bottom-space-md
+	margin-bottom: $bottom-space--md
 
 	table
 		margin-bottom: 0
@@ -332,7 +332,7 @@ table
 
 .#{$user-content}
 	table
-		margin-bottom: $bottom-space-md
+		margin-bottom: $bottom-space--md
 
 	.table-auto table
 		margin-bottom: 0
@@ -366,7 +366,7 @@ table
 
 	blockquote
 		display: block
-		margin: $bottom-space-lg 0
+		margin: $bottom-space--lg 0
 		padding: 40px 0
 		border: solid $outline-color
 		border-width: 2px 0
