--- a/src/sass/components/_accordion-simple.sass
+++ b/src/sass/components/_accordion-simple.sass
@@ -4,7 +4,7 @@
 
 /*accordion
 .simple-accordion
-	margin-bottom: $bottom-space-md
+	margin-bottom: $bottom-space--md
 	border-bottom: 2px solid $outline-color
 
 	& > a
