--- a/src/sass/components/_catalog-menu.sass
+++ b/src/sass/components/_catalog-menu.sass
@@ -578,9 +578,10 @@
 
 	+media('<desk-md')
 		display: block
+		+margin-horizontal($text-layout-space-horizontal--lg)
 
 	+media('<tab-lg')
-		display: block
+		+margin-horizontal(0)
 
 	.top-panel &
 		margin-top: $bottom-space
