--- a/src/sass/components/_j-filer.sass
+++ b/src/sass/components/_j-filer.sass
@@ -49,7 +49,7 @@
 	margin: 50px 0 0
 
 .jFiler-items-list, .#{$user-content} .jFiler-items-list
-	margin: #{$bottom-space-sm} 0
+	margin: #{$bottom-space--sm} 0
 
 	li
 		padding-left: 0
@@ -58,7 +58,7 @@
 			content: none
 
 .jFiler-item
-	margin: #{$bottom-space-sm} 0
+	margin: #{$bottom-space--sm} 0
 	+font($font-size--sm, $line-height--sm)
 	color: $text-color
 	overflow: hidden
