--- a/src/sass/components/_view-switcher.sass
+++ b/src/sass/components/_view-switcher.sass
@@ -9,7 +9,7 @@
 	height: 40px
 	overflow: hidden
 	border: 1px solid #d9d9d9
-	margin-bottom: $bottom-space-md
+	margin-bottom: $bottom-space--md
 
 	&:last-child
 		margin-bottom: 0
