--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -72,6 +72,11 @@
 @import components/map-site
 
 ///*======================================================*/
+///*VENDOR*/
+///*======================================================*/
+@import vendors/vendor-spinner
+
+///*======================================================*/
 ///*PARTIALS 2*/
 ///*======================================================*/
 @import partials/sidebar
