--- a/src/sass/pages/_home.sass
+++ b/src/sass/pages/_home.sass
@@ -103,7 +103,7 @@ $main-section-max-width-lg: 960px !default
 
 .main-section__holder
 	+clear
-	margin-bottom: $bottom-space-md
+	margin-bottom: $bottom-space--md
 
 	&:last-child
 		margin-bottom: 0
