--- a/src/sass/partials/_footer.sass
+++ b/src/sass/partials/_footer.sass
@@ -140,7 +140,7 @@ $footer-nav-horizontal-space: 40px
 		width: 32px
 
 	+media('<mob-lg')
-		margin-bottom: $bottom-space-sm
+		margin-bottom: $bottom-space--sm
 
 	a
 		color: inherit
