--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -41,9 +41,9 @@ $font-size-h6: round-float($font-size*0.75, 1) !default
 $line-height-h6: round-float($line-height*1.25, 2) !default
 
 $bottom-space: round-float(2.4rem, 1) !default
-$bottom-space-sm: round-float($font-size*$line-height*0.5, 1) !default
-$bottom-space-md: round-float($font-size*$line-height*1.5, 1) !default
-$bottom-space-lg: round-float($font-size*$line-height*2, 1) !default
+$bottom-space--sm: round-float($font-size*$line-height*0.5, 1) !default
+$bottom-space--md: round-float($font-size*$line-height*1.5, 1) !default
+$bottom-space--lg: round-float($font-size*$line-height*2, 1) !default
 
 // основной цвет сайте
 $base-color: #fabb00 !default
