--- a/src/sass/components/_article.sass
+++ b/src/sass/components/_article.sass
@@ -5,6 +5,6 @@
 /*article footer
 .article-footer
 	position: relative
-	margin-top: $bottom-space-md
+	margin-top: $bottom-space--md
 
 /*article footer end
