--- a/src/sass/components/_buttons.sass
+++ b/src/sass/components/_buttons.sass
@@ -24,7 +24,7 @@
 .btn-default, .btn-default-alt
 	position: relative
 	+font-alt-bold
-	+font(1.6rem, 24px)
+	+font(16px, 24px)
 	color: $btn-text-color
 	padding: 12px 25px
 	border: 1px solid transparent
@@ -55,7 +55,7 @@
 	position: relative
 	min-width: 240px
 	padding: 13px 30px
-	+font(1.6rem, 1.3)
+	+font(1.6px, 1.3)
 	color: $text-color
 	background-color: transparent
 	border: 1px solid $text-color
@@ -87,7 +87,7 @@
 	position: relative
 	min-width: 240px
 	padding: 13px 30px 14px
-	+font(1.4rem, 1.5)
+	+font(14px, 1.5)
 	color: white
 	background-color: transparent
 	+antialiased
@@ -137,7 +137,44 @@
 			&::before, &::after
 				background-color: $text-color
 
+/* btn-outline
+.btn-outline
+	position: relative
+	+font-alt-bold
+	+font(14px, 24px)
+	text-align: center
+	text-transform: uppercase
+	letter-spacing: 0.05em
+	white-space: nowrap
+	color: $btn-text-color
+	padding: 12px 25px
+	border: 3px solid $base-color--ea
+	background-color: white
+	transition-property: background-color, color, border-color
+	transition-duration: $animation-speed
+	margin: 0
 
+	.no-touchevents &:hover
+		background-color: $base-color--ea
+
+	&:active
+		transform: scale(0.95)
+
+// btn-with-icon
+.btn-with-icon
+	& > i, & > span
+		+display-inline-block-middle
+
+	& > i
+		margin-right: 5px
+
+		svg
+			+display-inline-block-top
+			+size(24px)
+
+	& > span
+		text-align: left
+		white-space: normal
 
 /* button to site
 .btn-siblings
@@ -381,9 +418,6 @@ $btn-menu-lines-color: $text-color !default
 	transition-property: background-color, opacity, visibility
 	transition-duration: $animation-speed
 	z-index: 9999
-
-	+media('<mob-lg')
-		+size(45px)
 
 	&::before
 		content: ''
