--- a/src/sass/components/_catalog-list.sass
+++ b/src/sass/components/_catalog-list.sass
@@ -6,7 +6,7 @@
 .catalog
 	overflow: hidden
 	padding-right: 1px
-	margin-bottom: $bottom-space-md
+	margin-bottom: $bottom-space--md
 
 	&:last-child
 		margin-bottom: 0
@@ -30,13 +30,61 @@
 	height: 100%
 	text-decoration: none
 	color: inherit
-	box-shadow: 0 0 0 1px $outline-color
+	//box-shadow: 0 0 0 1px $outline-color
 	transition-property: background
 	transition-duration: $animation-speed
 
 	.no-touchevents &
 		&:hover, &:focus
 			background: $bg-color-light
+
+// дополнительные бордеры нужны для safari
+// т.к. в этом браузере не поддерживается автовысота во flex-box элементах
+.catalog, .catalog__list, .catalog__item, .catalog__inner
+	position: relative
+
+	&::before, &::after
+		+pseudo()
+		+size(0)
+		border: 0 solid $outline-color
+
+.catalog
+	&::after
+		left: 0
+		bottom: 0
+		border-width: 0 0 1px
+		+size(9999px, 0)
+
+.catalog__list, .catalog__item
+	&::before
+		right: -1px
+		top: 0
+		+size(0, 9999px)
+		border-width: 0 1px 0 0
+
+.catalog__list
+	&::after
+		top: 0
+		left: 0
+		+size(9999px, 0)
+		border-width: 0 0 1px 0
+
+.catalog__item
+	&::after
+		top: 0
+		left: 0
+		+size(0, 9999px)
+		border-width: 0 0 0 1px
+
+.catalog__inner
+
+	&::after
+		top: -1px
+		left: 0
+		+size(9999px, 0)
+		border-width: 1px 0 0
+
+// дополнительные бордеры нужны для safari END
 
 .catalog__figure
 	float: left
