--- a/src/sass/components/_products-list.sass
+++ b/src/sass/components/_products-list.sass
@@ -5,8 +5,7 @@
 /* products
 .products
 	overflow: hidden
-	padding-right: 1px
-	margin-bottom: $bottom-space-md
+	margin-bottom: $bottom-space--md
 
 	&:last-child
 		margin-bottom: 0
@@ -19,18 +18,18 @@
 	+display-inline-block-top
 	width: 100%
 	position: relative
-	padding: 1px 0 0 1px
+	padding-top: 1px
 	+font(1.5rem, round-float(18px/15px, 2))
+	background-color: #{$bg-color}
 	letter-spacing: normal
 
 .products__inner
 	display: block
-	position: relative
-	padding: 38px 40px
 	height: 100%
+	+padding-vertical(13px)
 	text-decoration: none
 	color: inherit
-	box-shadow: 0 0 0 1px $outline-color
+	+clear-spacing
 	transition-property: background
 	transition-duration: $animation-speed
 
@@ -38,15 +37,87 @@
 		&:hover, &:focus
 			background: $bg-color-light
 
-.products__figure
-	float: left
+// дополнительные бордеры нужны для safari
+// т.к. в этом браузере не поддерживается автовысота во flex-box элементах
+// подходит только, если не нужно делать всю область кликабельной
+.products, .products__list, .products__item, .products__inner
 	position: relative
-	margin: 4px 40px 0 0
-	width: 102px
+
+	&::before, &::after
+		+pseudo()
+		+size(0)
+		border: 0 solid $outline-color
+
+.products
+	&::after
+		left: 0
+		bottom: 0
+		border-width: 0 0 1px
+		+size(9999px, 0)
+
+.products__list, .products__item
+	&::before
+		right: -1px
+		top: 0
+		+size(0, 9999px)
+		border-width: 0 1px 0 0
+		display: none
+
+		.grid-view-activated &
+			display: block
+
+.products__list
+	&::after
+		top: 0
+		left: 0
+		+size(9999px, 0)
+		border-width: 0 0 1px 0
+
+.products__item
+	&::after
+		top: 0
+		left: 0
+		+size(0, 9999px)
+		border-width: 0 0 0 1px
+		display: none
+
+		.grid-view-activated &
+			display: block
+
+.products__inner
+	&::after
+		top: -1px
+		left: 0
+		+size(9999px, 0)
+		border-width: 1px 0 0
+
+// дополнительные бордеры нужны для safari END
+
+.products__body, .products__footer
+	position: relative
+	+display-inline-block-middle
+
+.products__body
+	width: 65%
+
+.products__footer
+	width: 35%
+	padding-left: 1.5%
+
+.products__figure, .products__content, .products__title, .products__stock
+	+display-inline-block-middle
+
+$product-figure-width: 60px
+$product-figure-right-space: 20px
+.products__figure
+	position: relative
+	width: #{$product-figure-width}
+	margin-right: #{$product-figure-right-space}
+	letter-spacing: normal
 
 	&:before
 		+pseudo-block-relative()
-		+ratio(1, 1)
+		+ratio(4, 3)
 
 .products__img
 	+cover-abs()
@@ -61,10 +132,7 @@
 		+centering-transform-rel()
 
 .products__content
-	overflow: hidden
-
-	& > *:last-child
-		margin-bottom: 0
+	width: calc(100% - (#{$product-figure-width} + #{$product-figure-right-space}))
 
 	ul
 
@@ -102,19 +170,78 @@
 					border: none
 
 .products__title
+	width: 70%
 	+font-alt-bold
-	+font(18px, 22px)
-	text-transform: uppercase
-	margin-bottom: $bottom-space
+	+font(16px, 19px)
+	letter-spacing: normal
+	transition-property: color
+	transition-duration: $animation-speed
 
-.products__text
+	a
+		text-decoration: none
+		color: inherit
+		transition: inherit
+		padding-top: 0.2em
+
+		.no-touchevents &:hover
+			color: $link-color
+
+.products__stock
 	position: relative
+	+font(14px, 18px)
+	letter-spacing: normal
 
 	& > *:last-child
 		margin-bottom: 0
 
+.products__price, .products__options
+	+display-inline-block-middle
+	letter-spacing: normal
+
+.products__options
+	width: 170px
+
+.products__price
+	width: calc(100% - 170px)
+	text-align: right
+	padding-right: 20%
+
+	.cur, .no, .old
+		margin-bottom: 2px
+
+	.cur
+		+font(18px, 22px)
+		+font-bold
+
+	.no
+		+font(14px, 18px)
+
+	.old
+		+font(14px, 22px)
+		+font-normal
+		color: #666
+		text-decoration: line-through
+
+.products__options
+	text-align: center
+
+	.btn-outline
+		display: block
+
+		.in-cart &
+			display: none
+
+	.spinner
+		display: none
+
+		.in-cart &
+			display: inline-block
+
 /* grid view
 .grid-view-activated
+	&.products
+		padding-right: 1px
+
 	.products__list
 		display: flex
 		flex: 0 1 auto
@@ -123,8 +250,8 @@
 
 	.products__item
 		+display-inline-block-top
+		padding-left: 1px
 		width: round-float(100%/5, 4)
-		border-width: 0 1px 1px 0
 
 		+media('<desk-qhd')
 			width: round-float(100%/4, 4)
@@ -144,16 +271,41 @@
 		+media('<mob-lg')
 			width: round-float(100%/1, 4)
 
-
 	.products__inner
-		+padding-horizontal(30px)
+		padding: 30px
+		display: flex
+		flex-direction: column
+		justify-content: space-between
+
+	.products__body, .products__footer
+		display: block
+		width: auto
+		+padding-horizontal(0)
+
+	.products__figure, .products__content, .products__title, .products__stock, .products__price, .products__options
+		display: block
+		width: auto
 	
 	.products__figure
-		float: none
 		margin: 0 auto $bottom-space
+		width: 100%
+		max-width: 260px
 
 	.products__title
+		margin-bottom: 0.5em
+
+	.products__stock
+		margin-bottom: 1em
+
+	.products__price
+		margin-bottom: 1.5em
 		text-align: center
+		padding: 0
+
+		.cur, .no, .old
+			+display-inline-block-top
+			+margin-horizontal(0.2em)
+			margin-bottom: 0
 
 /* grid view end
 /* products end
