--- a/src/sass/components/_share-box.sass
+++ b/src/sass/components/_share-box.sass
@@ -20,7 +20,7 @@
 	+media('<mob-lg')
 		.share-box__label
 			float: none
-			margin-bottom: $bottom-space-sm
+			margin-bottom: $bottom-space--sm
 			max-width: none
 
 		.social-networks
