--- a/src/sass/components/_sliders.sass
+++ b/src/sass/components/_sliders.sass
@@ -145,7 +145,7 @@
 	margin-bottom: $bottom-space
 
 	+media('<tab-lg')
-		margin-bottom: $bottom-space-lg
+		margin-bottom: $bottom-space--lg
 
 .images-slider__list, .slick-dotted.images-slider__list
 	padding-bottom: $bottom-space
