--- a/src/sass/components/_user-form.sass
+++ b/src/sass/components/_user-form.sass
@@ -9,12 +9,12 @@
 	+font($font-size-h2, $line-height-h2)
 	color: $title-color
 	text-align: center
-	margin-bottom: $bottom-space-md
+	margin-bottom: $bottom-space--md
 
 .user-form
 	background: $bg-color-alt
 	padding: $text-layout-space-horizontal
-	margin-bottom: $bottom-space-md
+	margin-bottom: $bottom-space--md
 
 	+media('<tab-lg')
 		padding: $text-layout-space-horizontal--md
@@ -53,12 +53,12 @@
 
 			img
 				display: block
-				margin: 0 auto $bottom-space-sm
+				margin: 0 auto $bottom-space--sm
 
  		+clear
 
 		+media('<mob-lg')
-			padding-top: $bottom-space-sm
+			padding-top: $bottom-space--sm
 
 	.form-buttons
 		text-align: center
