--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -65,6 +65,8 @@
 @import components/news-grid
 @import components/providers
 @import components/article
+@import components/p-filters
+@import components/p-options
 @import components/catalog-list
 @import components/products-list
 @import components/catalog-menu
