--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -112,7 +112,7 @@ $form-font-size: 18px
 $form-line-height: 24px
 $form-input-height: 50px
 // ==================
-$checkbox-color: $base-color
+$checkbox-color: #{$text-color}
 // ==================
 $form-input-space-v: 12px
 $form-input-space-h: 18px
