--- a/src/sass/components/_buttons.sass
+++ b/src/sass/components/_buttons.sass
@@ -147,9 +147,9 @@
 	letter-spacing: 0.05em
 	white-space: nowrap
 	color: $btn-text-color
-	padding: 12px 25px
+	padding: 12px 12px
 	border: 3px solid $base-color--ea
-	background-color: white
+	background-color: transparent
 	transition-property: background-color, color, border-color
 	transition-duration: $animation-speed
 	margin: 0
