--- a/src/sass/components/_buttons.sass
+++ b/src/sass/components/_buttons.sass
@@ -143,6 +143,7 @@
 	+font-alt-bold
 	+font(14px, 24px)
 	text-align: center
+	text-decoration: none
 	text-transform: uppercase
 	letter-spacing: 0.05em
 	white-space: nowrap
