--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -65,18 +65,20 @@
 @import components/news-grid
 @import components/providers
 @import components/article
-@import components/p-filters
-@import components/p-options
+@import components/products-filters
+@import components/products-options
 @import components/catalog-list
 @import components/products-list
 @import components/catalog-menu
 @import components/view-switcher
 @import components/map-site
+@import components/product-card
 
 ///*======================================================*/
 ///*VENDOR*/
 ///*======================================================*/
 @import vendors/vendor-spinner
+@import vendors/vendor-fotorama
 
 ///*======================================================*/
 ///*PARTIALS 2*/
