--- a/src/sass/partials/_layout.sass
+++ b/src/sass/partials/_layout.sass
@@ -3,7 +3,7 @@
 @import ../../libs/include-media/dist/include-media
 
 /*LAYOUT*/
-//.wrapper
+.wrapper
 	margin: 0 auto
 	//min-height: 100%
 	//height: auto !important
