--- a/src/sass/base/_typography.sass
+++ b/src/sass/base/_typography.sass
@@ -13,7 +13,7 @@ body
 	background: $bg-color url(../../img/empty.png) no-repeat fixed
 	// min-width: 1600px
 	min-width: 320px
-	overflow-x: hidden
+	//overflow-x: hidden
 
 h1, h2, h3, h4, h5, h6
 	padding: 0
